- Package strict route now requires `.whl` explicit structure evidence (`METADATA`, `WHEEL`, and `RECORD` in `.dist-info`), preventing partial wheel metadata placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.msix` beyond manifest-only ZIP structure, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.deb` beyond required AR entry names, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.exe` beyond valid PE header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.msi` beyond valid CFB header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.appimage` beyond valid runtime marker bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.rpm` beyond lead/header marker bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now fails closed on partial ZIP/AR metadata even when required structure markers are present, preventing mixed valid/corrupt package acceptance.
- Archive/package tar coverage expanded:
- `.tar.xz/.txz` now follow explicit tar-plugin, fail-closed handling in archive/package lanes.
- Explicit `.tar` archive analysis now validates header checksum and octal size fields and fails closed on partial metadata even when earlier entries parsed, preventing mixed valid/corrupt tar acceptance.